# install_practice

./: README.md
compile/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  configure~  prime  prime.cpp
compile/.deps/: prime.Po
interpreter/: prime.py
